Update docs, and add first code

--- a/docs/data/cmip/CEDAESGF_Wrapper.ipynb
+++ b/docs/data/cmip/CEDAESGF_Wrapper.ipynb
@@ -30,26 +30,20 @@
     "- No way of combining timelines at the moment - ie historical into SSPXXX\n",
     "- No way of grabbing land masks - relies on importing external ones\n",
     "- Would like a storage demand estimator/ way of managing storage\n",
-    "- View of pivot table to visualize data avaliability"
+    "- View of pivot table to visualize data avaliability\n",
+    "\n",
+    "**Note that this notebook uses functions from the [ceda_esgf](../../../code/ceda_esgf/base) section of the `climdyn_tools` package.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
    "id": "8a3e17a6-18cd-4b3c-814b-711e2f282077",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'CEDAESGF_Funcs' from '/home/users/chingosa/TropExt/Ceda_ESGF/CEDAESGF_Funcs.py'>"
-      ]
-     },
-     "execution_count": 249,
-     "metadata": {},
-     "output_type": "execute_result"
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-08T17:07:03.937836Z",
+     "start_time": "2025-09-08T17:07:01.679382Z"
     }
-   ],
+   },
    "source": [
     "import os, intake_esgf\n",
     "import glob\n",
@@ -60,10 +54,24 @@
     "from intake_esgf import ESGFCatalog\n",
     "from importlib import reload  # Python 3.4+\n",
     "import matplotlib.pyplot as plt\n",
-    "import CEDAESGF_Funcs as CEFunc\n",
+    "import climdyn_tools.ceda_esgf.base as CEFunc\n",
+    "# import CEDAESGF_Funcs as CEFunc\n",
     "\n",
     "reload(CEFunc)\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'climdyn_tools.ceda_esgf.base' from '/Users/joshduffield/Documents/StAndrews/Wiki/climdyn_tools/ceda_esgf/base.py'>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -1938,9 +1946,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 + Jaspy",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "jaspy"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
